# multiprocessing__python

./: main.py  pyproject.toml
docs/: python-packaging.md
src/: example_pipe.py  example_queues.py
src/chapt3/: inherit.py
src/chapt6/: abstract.py  custom_mapping.py
src/chapt8/: namedtupple.py
src/mpx/: asyncawait.py  futures.py  philosopher.py  pipe.py  queues.py
