[project]
name = "multiprocessing-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
pipe = "mpx.pipe:main"
futures = "mpx.futures:main"
queues = "mpx.queues:main"
asyncawait = "mpx.asyncawait:main"
philo = "mpx.philosopher:runner"
inherit = "chapt3.inherit:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
